--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   # Use docker.io for Docker Hub if empty
-  REGISTRY: 
+  #REGISTRY: 
   # github.repository as <account>/<repo>
   IMAGE_NAME: lightpanda
 
