--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,9 +7,9 @@ name: Docker
 
 on:
   schedule:
-    - cron: '43 14 * * *'
+    - cron: '43 14 * * 1'
   push:
-    branches: [ "main" ]
+    branches: [ "nightly" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
